[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turboquant-mlx"
version = "0.1.0"
description = "TurboQuant (ICLR 2026) implementation for Apple MLX"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "TurboQuant MLX" }]
dependencies = [
  "mlx>=0.29.0",
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
